new version of the website

--- a/template.html
+++ b/template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8">
@@ -7,79 +8,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Business Promotion Under the Sun">
     <meta name="keywords" content="............">
-    <meta name="author" content="All Beast Squad"> 
+    <meta name="author" content="All Beast Squad">
     <title>Home | All Beast Squad</title>
     <link rel="icon" type="image/png" href="img/fav.png" />
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sriracha&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bangers&family=Orbitron&family=Permanent+Marker&family=Stick&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <div class="header-img">
-            <div class="logo">
-                <a href="/"><img src="img/Logo.png" alt="AllBeastSquad" height="250px" width="350px"></a>
+        <div class="header-img container-fluid">
+            <div class="row">
+                <a href="/"><img src="img/Logo.png" alt="AllBeastSquad" class="logo" /></a>
             </div>
             <div>
-                <h1>Under the Sun</h1>
+                <h1 class="sun">Under the Sun</h1>
             </div>
         </div>
     </header>
 
+    <!-- NAVIGATION BAR-->
     <nav class="clearfix">
         <div class="row limited">
-        <button id="hamburgerBtn">&#9776;</button>
-        <ul id="primaryNav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="ourWork.html">Our Work</a></li>
-			<li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
-            <li><a href="conatct.html">Contact Us</a></li>
-        </ul>
-            </div> <!-- end row -->
+            <button id="hamburgerBtn">&#9776;</button>
+            <ul id="primaryNav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="ourWork.html">Our Work</a></li>
+                <li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </div> <!-- end row -->
     </nav>
 
+
+    <!-- START OF MAIN CONTENT SECTION -->
+
     <main>
-        <div>
-            <p>TEST TEXT</p>
-        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum officia cumque iure doloremque assumenda ut
+            labore, accusamus ducimus quis doloribus architecto vitae, repudiandae aut veniam cum. Mollitia, pariatur
+            quod? Molestiae?
+        </p>
     </main>
 
+    <!-- END OF MAIN CONTENT SECTION -->
+
+
+    <!-- FOOTER -->
     <footer class="clearfix">
         <div class="row limited">
-            <!--<section class="column small-12 medium-6 large-3">
-                <h2>Location</h2>
-                <ul>
-                    <li>Bethany's Pie Shop</li>
-                    <li>123 Bakery Street</li> 
-                    <li>Brussels, Belgium</li>
-                </ul>
-            </section>-->
-            <section class="column small-12 medium-6 large-4">
+            <section class="col-sm-12 col-md-6 col-lg-4">
                 <h2>About Us</h2>
-                <img src="img/Logo.png" alt="AllBeastSquad" height="120px">
+                <img src="img/Logo.png" alt="AllBeastSquad" height="120px" class="zoom">
                 <p>&copy; 2015 &bull; all rights reserved.</p>
             </section>
-            <section class="column small-12 medium-6 large-4">
+            <section class="col-sm-12 col-md-6 col-lg-4">
                 <h2>Company</h2>
-                <ul>
+                <ul class="company">
                     <li>Design service</li>
-                    <li>Business Promotion</li> 
+                    <li>Business Promotion</li>
                     <li>Promo Material Printing</li>
                     <li>Website and Social Media Management</li>
                 </ul>
             </section>
-            <section class="column small-12 medium-6 large-4">
+            <section class="col-sm-12 col-md-6 col-lg-4 mx-auto">
                 <h2>Social</h2>
                 <ul class="social">
-                    <li><a href="https://www.facebook.com/AllBeastSquad/"><img src="/img/fb.png" alt="Facebook" height="50px" /></a></li>
-                    <li><a href="https://www.instagram.com/allbeastsquad/"><img src="/img/ig.png" alt="instagram" height="50px" /></a></li> 
-                    <li><a href="https://twitter.com/AllBeastSquad"><img src="/img/tw.png" alt="twitter" height="50px" /></a></li>
+                    <li><a href="https://www.facebook.com/AllBeastSquad/"><img src="/img/fb.png" alt="Facebook"
+                                height="50px" /></a></li>
+                    <li><a href="https://www.instagram.com/allbeastsquad/"><img src="/img/ig.png" alt="instagram"
+                                height="50px" /></a></li>
+                    <li><a href="https://twitter.com/AllBeastSquad"><img src="/img/tw.png" alt="twitter"
+                                height="50px" /></a></li>
                 </ul>
             </section>
-            
-</div> <!-- end row -->
+
+        </div> <!-- end row -->
     </footer>
-    <script src="js/menuToggle.js"></script> 
+    <script src="js/menuToggle.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
+
 </html>
