--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Business Promotion Under the Sun">
-    <meta name="keywords" content="............">
-    <meta name="author" content="All Beast Squad">
-    <title>Our Work | All Beast Squad</title>
+    <meta name="keywords" content="contact, website, advertising, promotion, small business">
+    <meta name="author" content="All Beast Squad"> 
+    <title>Contact Us | All Beast Squad</title>
     <link rel="icon" type="image/png" href="img/fav.png" />
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sriracha&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -32,30 +33,40 @@
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="ourWork.html">Our Work</a></li>
+            <li><a href="ourWork.html">Our Work</a></li>
 			<li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li class="active"><a href="conatct.html">Contact Us</a></li>
         </ul>
             </div> <!-- end row -->
     </nav>
-
+    <!-- START OF MAIN CONTENT SECTION -->
     <main>
         <div>
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">
-                        <div class="image">
-                            <img src="/img/gamer.jpg" alt="gamer" height="200px" width="100">
-                        </div>
-                    </div>
-                    <div class="card-back">
-                        <p>This is a test text</p>
-                    </div>
-                </div>
-            </div>
+            <form action="https://formsubmit.co/wazosifu@maildim.com" method="POST" enctype="text/plain" name="FormData">
+                <fieldset>
+                    <legend>Contact Us</legend>
+                        <input type="hidden" name="_next" value="...">
+                        <input type="hidden" name="_subject" value="New submission!">
+                        <input type="hidden" name="_cc" value="...">
+                        <p><label for="name">Name<br />
+                        <input type="text" name="_name" required minlength="3" maxlength="35" /></label></p>
+                        <p><label for="phone">Phone Number<br />
+                        <input type="tel" name="phone" /></label></p>
+                        <p><label for="email">Email Address<br />
+                        <input type="email" name="_email" required /></label></p>
+                        <input type="hidden" name="source" value="ContactForm" />
+                        <p><label for="message">Message: <br />
+                        <textarea cols="40" rows="3" name="message" required>test</textarea></label></p>
+
+                        <button type="submit">Send</button>
+                        <button type="reset">Reset</button>
+
+                </fieldset>
+            </form>
+            
         </div>
     </main>
-
+    <!-- END OF MAIN CONTENT SECTION -->
     <footer class="clearfix">
         <div class="row limited">
             <section class="column small-12 medium-6 large-4">
@@ -84,5 +95,10 @@
 </div> <!-- end row -->
     </footer>
     <script src="js/menuToggle.js"></script> 
+    <script type="text/javascript">
+        document.getElementById("myButton").onclick = function () {
+            location.href = "contact_sub.html";
+        };
+    </script>
 </body>
 </html>
