changes to font

--- a/index.html
+++ b/index.html
@@ -1,95 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Business Promotion Under the Sun">
-    <meta name="keywords" content="............">
-    <meta name="author" content="All Beast Squad">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Business Promotion Under the Sun" />
+    <meta name="keywords" content="............" />
+    <meta name="author" content="All Beast Squad" />
     <title>Home | All Beast Squad</title>
     <link rel="icon" type="image/png" href="img/fav.png" />
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Bangers&family=Orbitron&family=Permanent+Marker&family=Stick&display=swap"
-        rel="stylesheet">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Bangers&family=Orbitron&family=Permanent+Marker&family=Stick&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header-img container-fluid">
-            <div class="row">
-                <a href="/"><img src="img/Logo.png" alt="AllBeastSquad" class="logo" /></a>
-            </div>
-            <div>
-                <h1 class="sun">Under the Sun</h1>
-            </div>
+      <div class="header-img container-fluid">
+        <div class="row">
+          <a href="/"
+            ><img src="img/Logo.png" alt="AllBeastSquad" class="logo"
+          /></a>
         </div>
+        <div>
+          <h1 class="sun">Under the Sun</h1>
+        </div>
+      </div>
     </header>
 
     <!-- NAVIGATION BAR-->
     <nav class="clearfix">
-        <div class="row limited">
-            <button id="hamburgerBtn">&#9776;</button>
-            <ul id="primaryNav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="ourWork.html">Our Work</a></li>
-                <li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </div> <!-- end row -->
+      <div class="row limited">
+        <button id="hamburgerBtn">&#9776;</button>
+        <ul id="primaryNav">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="ourWork.html">Our Work</a></li>
+          <li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+      <!-- end row -->
     </nav>
 
     <main>
-        <div>
-            <h1>All Beast Squad</h1>
-            <p>Our aim is to help small businesses and artists to promote their names.</p>
-            <p>Both online and in real world.</p>
-            <p>We can help with designing your website and social media promotion. We offer domains, hosting, email
-                accounts, SSL certificates or VPN accounts.</p>
-            <p>But that’s not all. We can design and print your business cards, flyers, posters and even large scale
-                banners.</p>
-        </div>
+      <div>
+        <h1>All Beast Squad</h1>
+        <p>
+          G'day, mate! Welcome to our ripper homepage! We're here to give Aussie
+          small businesses and artists a fair go by slapping their names on the
+          map, both online and in the real world. We're dinkum about helping you
+          out, ya know?
+        </p>
+        <br />
+        <p>
+          When it comes to the online game, we've got ya covered, cobber. We'll
+          deck out your website like a true-blue legend and give your social
+          media presence a fair suck of the sauce bottle. Need a domain?
+          Hosting? Email accounts? We'll chuck 'em your way faster than a
+          kangaroo on a trampoline. And to top it off, we'll even sort ya out
+          with some fancy SSL certificates and VPN accounts 'cause privacy is as
+          important as a snag sizzle at a Sunday arvo barbie.
+        </p>
+        <br />
+        <p>
+          But hold your horses, there's more to us than just tech stuff. We're
+          legends at printing, too! We'll whip up the most bonza business cards,
+          ripper flyers, and bloody awesome posters you've ever seen. And if
+          you're after something bigger than a croc in the Top End, we'll knock
+          ya socks off with our huge-as-a-whale large-scale banners that'll make
+          ya say, "Crikey!"
+        </p>
+        <br />
+        <p>
+          So, whether you're a fair-dinkum entrepreneur or a top-notch artist,
+          strap yourself in and let's have a bonzer time together. We're here to
+          make ya stand out, have a bloody good laugh, and make your dreams come
+          true (or at least your marketing dreams, mate). Let's chuck a snag on
+          the barbie and get this party started, Aussie style!
+        </p>
+        <br />
+      </div>
     </main>
 
     <!-- FOOTER -->
     <footer class="clearfix">
-        <div class="row limited">
-            <section class="col-sm-12 col-md-6 col-lg-4">
-                <h2>About Us</h2>
-                <img src="img/Logo.png" alt="AllBeastSquad" height="120px" class="zoom">
-                <p>&copy; 2015 &bull; all rights reserved.</p>
-            </section>
-            <section class="col-sm-12 col-md-6 col-lg-4">
-                <h2>Company</h2>
-                <ul class="company">
-                    <li>Design service</li>
-                    <li>Business Promotion</li>
-                    <li>Promo Material Printing</li>
-                    <li>Website and Social Media Management</li>
-                </ul>
-            </section>
-            <section class="col-sm-12 col-md-6 col-lg-4 mx-auto">
-                <h2>Social</h2>
-                <ul class="social">
-                    <li><a href="https://www.facebook.com/AllBeastSquad/"><img src="/img/fb.png" alt="Facebook"
-                                height="50px" /></a></li>
-                    <li><a href="https://www.instagram.com/allbeastsquad/"><img src="/img/ig.png" alt="instagram"
-                                height="50px" /></a></li>
-                    <li><a href="https://twitter.com/AllBeastSquad"><img src="/img/tw.png" alt="twitter"
-                                height="50px" /></a></li>
-                </ul>
-            </section>
-
-        </div> <!-- end row -->
+      <div class="row limited">
+        <section class="col-sm-12 col-md-6 col-lg-4">
+          <h2>About Us</h2>
+          <img
+            src="img/Logo.png"
+            alt="AllBeastSquad"
+            height="120px"
+            class="zoom"
+          />
+          <p>&copy; 2015 &bull; all rights reserved.</p>
+        </section>
+        <section class="col-sm-12 col-md-6 col-lg-4">
+          <h2>Company</h2>
+          <ul class="company">
+            <li>Design service</li>
+            <li>Business Promotion</li>
+            <li>Promo Material Printing</li>
+            <li>Website and Social Media Management</li>
+          </ul>
+        </section>
+        <section class="col-sm-12 col-md-6 col-lg-4 mx-auto">
+          <h2>Social</h2>
+          <ul class="social">
+            <li>
+              <a href="https://www.facebook.com/AllBeastSquad/"
+                ><img src="/img/fb.png" alt="Facebook" height="50px"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allbeastsquad/"
+                ><img src="/img/ig.png" alt="instagram" height="50px"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/AllBeastSquad"
+                ><img src="/img/tw.png" alt="twitter" height="50px"
+              /></a>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <!-- end row -->
     </footer>
     <script src="js/menuToggle.js"></script>
     <script src="js/bootstrap.js"></script>
-</body>
-
+  </body>
 </html>
