contact form and start to gallery

--- a/contact_sub.html
+++ b/contact_sub.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Business Promotion Under the Sun">
-    <meta name="keywords" content="............">
-    <meta name="author" content="All Beast Squad"> 
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Business Promotion Under the Sun" />
+    <meta name="keywords" content="............" />
+    <meta name="author" content="All Beast Squad" />
     <title>Home | All Beast Squad</title>
     <link rel="icon" type="image/png" href="img/fav.png" />
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sriracha&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sriracha&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div class="header-img">
-            <div class="logo">
-                <a href="/"><img src="img/Logo.png" alt="AllBeastSquad" height="250px" width="350px"></a>
-            </div>
-            <div>
-                <h1>Under the Sun</h1>
-            </div>
+      <div class="header-img">
+        <div class="logo">
+          <a href="/"
+            ><img
+              src="img/Logo.png"
+              alt="AllBeastSquad"
+              height="250px"
+              width="350px"
+          /></a>
         </div>
+        <div>
+          <h1>Under the Sun</h1>
+        </div>
+      </div>
     </header>
 
     <nav class="clearfix">
-        <div class="row limited">
+      <div class="row limited">
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="ourWork.html">Our Work</a></li>
-			<li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="ourWork.html">Our Work</a></li>
+          <li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
-            </div> <!-- end row -->
+      </div>
+      <!-- end row -->
     </nav>
 
     <main>
-        <div>
-            <p>Thank you for your message. We aim to respond as soon as possible.</p>
-        </div>
+      <div>
+        <p>
+          Thank you for your message. We aim to respond as soon as possible.
+        </p>
+      </div>
     </main>
 
     <footer class="clearfix">
-        <div class="row limited">
-            <!--<section class="column small-12 medium-6 large-3">
+      <div class="row limited">
+        <!--<section class="column small-12 medium-6 large-3">
                 <h2>Location</h2>
                 <ul>
                     <li>Bethany's Pie Shop</li>
@@ -55,31 +67,43 @@
                     <li>Brussels, Belgium</li>
                 </ul>
             </section>-->
-            <section class="column small-12 medium-6 large-4">
-                <h2>About Us</h2>
-                <img src="img/Logo.png" alt="AllBeastSquad" height="120px">
-                <p>&copy; 2015 &bull; all rights reserved.</p>
-            </section>
-            <section class="column small-12 medium-6 large-4">
-                <h2>Company</h2>
-                <ul>
-                    <li>Design service</li>
-                    <li>Business Promotion</li> 
-                    <li>Promo Material Printing</li>
-                    <li>Website and Social Media Management</li>
-                </ul>
-            </section>
-            <section class="column small-12 medium-6 large-4">
-                <h2>Social</h2>
-                <ul class="social">
-                    <li><a href="https://www.facebook.com/AllBeastSquad/"><img src="/img/fb.png" alt="Facebook" height="50px" /></a></li>
-                    <li><a href="https://www.instagram.com/allbeastsquad/"><img src="/img/ig.png" alt="instagram" height="50px" /></a></li> 
-                    <li><a href="https://twitter.com/AllBeastSquad"><img src="/img/tw.png" alt="twitter" height="50px" /></a></li>
-                </ul>
-            </section>
-            
-</div> <!-- end row -->
+        <section class="column small-12 medium-6 large-4">
+          <h2>About Us</h2>
+          <img src="img/Logo.png" alt="AllBeastSquad" height="120px" />
+          <p>&copy; 2015 &bull; all rights reserved.</p>
+        </section>
+        <section class="column small-12 medium-6 large-4">
+          <h2>Company</h2>
+          <ul>
+            <li>Design service</li>
+            <li>Business Promotion</li>
+            <li>Promo Material Printing</li>
+            <li>Website and Social Media Management</li>
+          </ul>
+        </section>
+        <section class="column small-12 medium-6 large-4">
+          <h2>Social</h2>
+          <ul class="social">
+            <li>
+              <a href="https://www.facebook.com/AllBeastSquad/"
+                ><img src="/img/fb.png" alt="Facebook" height="50px"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allbeastsquad/"
+                ><img src="/img/ig.png" alt="instagram" height="50px"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/AllBeastSquad"
+                ><img src="/img/tw.png" alt="twitter" height="50px"
+              /></a>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <!-- end row -->
     </footer>
-    <script src="js/menuToggle.js"></script> 
-</body>
+    <script src="js/menuToggle.js"></script>
+  </body>
 </html>
