--- a/contact.html
+++ b/contact.html
@@ -1,104 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Business Promotion Under the Sun">
-    <meta name="keywords" content="contact, website, advertising, promotion, small business">
-    <meta name="author" content="All Beast Squad"> 
-    <title>Contact Us | All Beast Squad</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Business Promotion Under the Sun" />
+    <meta name="keywords" content="............" />
+    <meta name="author" content="All Beast Squad" />
+    <title>Home | All Beast Squad</title>
     <link rel="icon" type="image/png" href="img/fav.png" />
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sriracha&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- <link rel="stylesheet" href="css/bootstrap.css" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&family=Orbitron&family=Permanent+Marker&family=Stick&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
     <header>
-        <div class="header-img">
-            <div class="logo">
-                <a href="/"><img src="img/Logo.png" alt="AllBeastSquad" height="250px" width="350px"></a>
-            </div>
-            <div>
-                <h1>Under the Sun</h1>
-            </div>
+      <div class="header-img container-fluid">
+        <div class="row">
+          <a href="/"
+            ><img src="img/Logo.png" alt="AllBeastSquad" class="logo"
+          /></a>
         </div>
+        <div>
+          <h1 class="sun">Under the Sun</h1>
+        </div>
+      </div>
     </header>
 
+    <!-- NAVIGATION BAR-->
     <nav class="clearfix">
-        <div class="row limited">
+      <div class="row limited">
         <button id="hamburgerBtn">&#9776;</button>
         <ul id="primaryNav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="ourWork.html">Our Work</a></li>
-			<li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
-            <li class="active"><a href="conatct.html">Contact Us</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="ourWork.html">Our Work</a></li>
+          <li><a href="https://allbeastsquad.wordpress.com/">Blog</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
-            </div> <!-- end row -->
+      </div>
+      <!-- end row -->
     </nav>
+
     <!-- START OF MAIN CONTENT SECTION -->
     <main>
-        <div>
-            <form action="https://formsubmit.co/wazosifu@maildim.com" method="POST" enctype="text/plain" name="FormData">
-                <fieldset>
-                    <legend>Contact Us</legend>
-                        <input type="hidden" name="_next" value="...">
-                        <input type="hidden" name="_subject" value="New submission!">
-                        <input type="hidden" name="_cc" value="...">
-                        <p><label for="name">Name<br />
-                        <input type="text" name="_name" required minlength="3" maxlength="35" /></label></p>
-                        <p><label for="phone">Phone Number<br />
-                        <input type="tel" name="phone" /></label></p>
-                        <p><label for="email">Email Address<br />
-                        <input type="email" name="_email" required /></label></p>
-                        <input type="hidden" name="source" value="ContactForm" />
-                        <p><label for="message">Message: <br />
-                        <textarea cols="40" rows="3" name="message" required>test</textarea></label></p>
+      <div>
+        <form id="myForm" method="POST" enctype="text/plain" name="FormData">
+          <fieldset>
+            <legend>Contact Us</legend>
+            <p>
+              <label for="name"
+                >Name<br />
+                <input
+                  type="text"
+                  name="name"
+                  required
+                  minlength="3"
+                  maxlength="35"
+                  id="name"
+              /></label>
+            </p>
+            <p>
+              <label for="phone"
+                >Phone Number<br />
+                <input type="tel" name="phone" id="phone"
+              /></label>
+            </p>
+            <p>
+              <label for="email"
+                >Email Address<br />
+                <input type="email" name="email" id="email" required
+              /></label>
+            </p>
+            <input type="hidden" name="source" value="ContactForm" />
+            <p>
+              <label for="message"
+                >Message: <br />
+                <textarea cols="40" rows="3" name="message" required>
+test</textarea
+                >
+              </label>
+            </p>
 
-                        <button type="submit">Send</button>
-                        <button type="reset">Reset</button>
-
-                </fieldset>
-            </form>
-            
-        </div>
+            <button type="submit">Send</button>
+            <button type="reset">Reset</button>
+          </fieldset>
+        </form>
+      </div>
     </main>
     <!-- END OF MAIN CONTENT SECTION -->
     <footer class="clearfix">
-        <div class="row limited">
-            <section class="column small-12 medium-6 large-4">
-                <h2>About Us</h2>
-                <img src="img/Logo.png" alt="AllBeastSquad" height="120px">
-                <p>&copy; 2015 &bull; all rights reserved.</p>
-            </section>
-            <section class="column small-12 medium-6 large-4">
-                <h2>Company</h2>
-                <ul>
-                    <li>Design service</li>
-                    <li>Business Promotion</li> 
-                    <li>Promo Material Printing</li>
-                    <li>Website and Social Media Management</li>
-                </ul>
-            </section>
-            <section class="column small-12 medium-6 large-4">
-                <h2>Social</h2>
-                <ul class="social">
-                    <li><a href="https://www.facebook.com/AllBeastSquad/"><img src="/img/fb.png" alt="Facebook" height="50px" /></a></li>
-                    <li><a href="https://www.instagram.com/allbeastsquad/"><img src="/img/ig.png" alt="instagram" height="50px" /></a></li> 
-                    <li><a href="https://twitter.com/AllBeastSquad"><img src="/img/tw.png" alt="twitter" height="50px" /></a></li>
-                </ul>
-            </section>
-            
-</div> <!-- end row -->
+      <div class="row limited">
+        <section class="col-sm-12 col-md-6 col-lg-4">
+          <h2>About Us</h2>
+          <img
+            src="img/Logo.png"
+            alt="AllBeastSquad"
+            height="120px"
+            class="zoom"
+          />
+          <p>&copy; 2015 &bull; all rights reserved.</p>
+        </section>
+        <section class="col-sm-12 col-md-6 col-lg-4">
+          <h2>Company</h2>
+          <ul class="company">
+            <li>Design service</li>
+            <li>Business Promotion</li>
+            <li>Promo Material Printing</li>
+            <li>Website and Social Media Management</li>
+          </ul>
+        </section>
+        <section class="col-sm-12 col-md-6 col-lg-4 mx-auto">
+          <h2>Social</h2>
+          <ul class="social">
+            <li>
+              <a href="https://www.facebook.com/AllBeastSquad/"
+                ><img src="/img/fb.png" alt="Facebook" height="50px"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allbeastsquad/"
+                ><img src="/img/ig.png" alt="instagram" height="50px"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/AllBeastSquad"
+                ><img src="/img/tw.png" alt="twitter" height="50px"
+              /></a>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <!-- end row -->
     </footer>
-    <script src="js/menuToggle.js"></script> 
+    <script src="js/menuToggle.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
+    ></script>
+
     <script type="text/javascript">
-        document.getElementById("myButton").onclick = function () {
-            location.href = "contact_sub.html";
-        };
+      (function () {
+        emailjs.init("RbZNQ8ROsJTIpWnN4");
+      })();
     </script>
-</body>
+    <script>
+      emailjs.sendForm("service_a7koizd", "template_9qu8hkb", "#myForm");
+    </script>
+    <script>
+      // listen to the form submission
+      document
+        .getElementById("myForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+
+          const serviceID = "service_a7koizd";
+          const templateID = "template_9qu8hkb";
+
+          // send the email here
+          emailjs.sendForm(serviceID, templateID, this).then(
+            (response) => {
+              console.log("SUCCESS!", response.status, response.text);
+              alert("Thank You For Your Message!");
+            },
+            (error) => {
+              console.log("FAILED...", error);
+              alert("FAILED...", error);
+            }
+          );
+        });
+    </script>
+  </body>
 </html>
