--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Home | All Beast Squad</title>
     <link rel="icon" type="image/png" href="img/fav.png" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
+    <!-- <link rel="stylesheet" href="css/bootstrap.css" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
